<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_for_login" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="11dp"
                app:srcCompat="@drawable/ic_recycler_new" />
            <TextView
                android:id="@+id/text_company_short"
                style="@style/TextCompanyNameShort"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageView4"
                android:layout_toRightOf="@+id/imageView4"
                android:text="@string/company_name_short" />
            <TextView
                android:id="@+id/textView3"
                style="@style/TextCompatyName"
                android:text="@string/company_name"
                android:layout_below="@+id/text_company_short"
                android:layout_centerHorizontal="true" />
            <TextView
                style="@style/TextAppName"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="15dp"
                android:text="@string/app_name" />
        </RelativeLayout>
    </FrameLayout>
    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_gradient_for_login">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout">
            <TextView
                style="@style/TextLoginData"
                android:text="@string/login"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/textView4" />
            <EditText
                style="@style/EditTextLoginData"
                android:ems="10"
                android:gravity="end"
                android:id="@+id/login"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/textView4"
                android:layout_toRightOf="@+id/textView4" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:id="@+id/view2"
            android:layout_below="@+id/relativeLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                style="@style/TextLoginData"
                android:text="@string/password"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/textView5" />
            <EditText
                style="@style/EditTextLoginData"
                android:inputType="textPassword"
                android:ems="10"
                android:gravity="end"
                android:id="@+id/password"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/textView5"
                android:layout_toRightOf="@+id/textView5" />
        </RelativeLayout>
        <Button
            android:text="@string/enter"
            style="@style/ButtonLogin"
            android:id="@+id/enter"
            android:layout_above="@+id/signGoogle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"/>
        <Button
            android:text="@string/enterGoogle"
            style="@style/ButtonLogin"
            android:id="@+id/signGoogle"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</LinearLayout>
